2003-09-03  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b54
	
	* Fix of bug introduced in -b53, where errors are generated in 
	  new Album code.

2003-09-03  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b53

	* This checkin is a fix to the partially broken -b49, by handling 
	  multi-dimensional arrays in defaults correctly.

	* Undo changes in b50.

	* Added nice functions array_stripslashes() and array_str_replace
	  that will clean up strings in any array.

	* Hidden text was written in both index.php and the include
	  files.  It is now only written in index.php

2003-09-03  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b52

	* Fixed Config. Wizard so you get stylesheets without config.php 
	  existing.

2003-09-02  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b51

	* Temporary fix while investigating why -b49 did not work with 
	  magic quotes

2003-09-02  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b50

	* Synced all languages against latest changes

        * Language update: German (de_DE), Spanish (es_ES), Traditional Chinese (zh_TW)

        * dos2unix'ed po files and removed obsolete lines

	* "New" Language: Traditional Chinese (zh_TW.utf8)

	* Added $nls['flag'] to use same flag file for different languagenames

2003-09-02  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b49

	* Mostly cosmetic changes.

	* More space to edit summary in album properties.

	* No longer strip tags from custom fields.

	* Only display "<Empty>" for a field if we can modify it.

	* Album description defaults to "" rather than "No description".

	* If we try to create an album with a name that already
	  exists, add 00 to the album name, rather than reverting to
	  albumXX.  Eg if we try to create and album "party", and it
	  already exists, then "party01" will be created. Function
	  createNewAlbum() returns the new album's name.

	* No longer centering summary (easier to center it than uncenter it).

